--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<section class="wrapper style2">
 					<div class="inner">
 						<header>
-							<h2>As melhores Set List</h2>
+							<h2>As melhores SetLists </h2>
 							<p>Dezenas de novos sets invadiram o Tomorrowland Festival, confira abaixo as melhores.</p>
 						</header>
 						<!-- Tabbed Video Section -->
